test/files/neg/macro-invalidusage-presuper/Macros_Test_2.scala
// scalac: -language:experimental.macros
import Impls._

class D extends { def x = macro impl } with AnyRef
